--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body {
 }
 .hero {
 	height: 200px;
-	background-image:url(hero.img/hero.png);
+	background-image:url(hero.png);
 	background-size: cover;
 	background-position: 0 -50px;
 	border-top: 5px solid darksalmon;
@@ -128,3 +128,4 @@ ul {
     list-style-type: disc;
     margin-left: 20px;
 }
+
